Fixed country code and mobile number alignment

--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -85,16 +85,16 @@
           padding: 8px 0 0 5px;
           width: 100%;
           display: flex;
-          align-items: baseline;
+          align-items: flex-end;
           margin-bottom: 20px;
 
           .country-code {
             width: fit-content;
             margin-bottom: -20px;
 
-            .MuiSelect-root {
-              margin-bottom: 1px;
-            }
+            // .MuiSelect-root {
+            //   margin-bottom: 1px;
+            // }
           }
 
           .input {
